<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">
    <LinearLayout android:id="@+id/login_lay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_margin="20dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"/>"
            <EditText android:id="@+id/user_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>"
            <EditText android:id="@+id/password_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
	    <Button android:id="@+id/login_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/user_login"/>"
        
    </LinearLayout>
    <LinearLayout android:id="@+id/logined_lay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
	    <Button android:id="@+id/logout_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/user_logout"/>"
	    <Button android:id="@+id/active_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/start_active"
	        android:visibility="gone"/>
	    <Button android:id="@+id/send_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/send_by_hand"/>"
    </LinearLayout>
</LinearLayout>
