<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <!-- modified by zhf 20151004 -->
    <TextView android:id="@+id/time_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"/>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal">
	    <Button android:id="@+id/replay_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/replay_btn_txt"
	        android:layout_marginRight="10dp"/>
    
	    <Button android:id="@+id/diagnose_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/diagnose_result"
	        android:layout_marginRight="10dp"/>
	    
	    <Button android:id="@+id/dotGraph_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/dot_graph"
	        android:layout_marginRight="10dp"/>
	    
	    <Button android:id="@+id/delete_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/delete_btn_txt"
	        android:layout_marginRight="10dp"/>
    </LinearLayout>
</LinearLayout>